# generative-ui-ai-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  next.config.ts  package-lock.json  package.json  start-dev.sh  tsconfig.json
deno-mcp-server/: Dockerfile  deno.json  main.ts  mcp.ts
mcp-server/: main.py  pyproject.toml
mcp-server/tools/: search.py  weather.py
python-mcp-server/: Dockerfile  pyproject.toml
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts  tools.ts
src/components/: searchResults.tsx  stockChart.tsx  stockFinancials.tsx  theme-toggle.tsx  weather.tsx
